# SelfCompDVLO-pytorch

./: README.md  test_depthcomp.py  test_odometry_opt.py  utils.py
data/: depth_interpolate.py  depth_loader.py  odom_loader.py
data/filenames/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  depth_test.txt  depth_val.txt  depth_vals.txt
logger/: helper.py  metrics.py
models/: layers.py  nets.py  se3.py
models/ceres-python/: CMakeLists.txt  README.md  setup.py
models/ceres-python/src/: bindings.cpp  direct_tracking.cpp
models/ceres-python/tests/: test.py
